--- a/frontend/html/navbar.html
+++ b/frontend/html/navbar.html
@@ -43,9 +43,11 @@
 
   <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation" aria-label="Hovednavigation">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Vennekredsen</a>
+        <a class="navbar-brand fw-bold" href="index.html" aria-label="Vennekredsen forside">
+          <i class="fas fa-heart me-2"></i>Vennekredsen
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -53,26 +55,36 @@
           data-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
+          aria-label="Åbn navigationsmenu"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse text-center" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Hjem</a>
+              <a class="nav-link" href="index.html" aria-label="Gå til forsiden">
+                <i class="fas fa-home me-1"></i>Hjem
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Om Os</a>
+              <a class="nav-link" href="about.html" aria-label="Læs om Vennekredsen">
+                <i class="fas fa-info-circle me-1"></i>Om Os
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="tilmelding.html">Tilmelding</a>
+              <a class="nav-link" href="tilmelding.html" aria-label="Tilmeld dig som medlem">
+                <i class="fas fa-user-plus me-1"></i>Tilmelding
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ansogning.html">Ansøg Vennekredsen</a>
+              <a class="nav-link" href="ansogning.html" aria-label="Ansøg om støtte fra Vennekredsen">
+                <i class="fas fa-file-alt me-1"></i>Ansøg om Støtte
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Login</a>
+              <a class="nav-link" href="login.html" aria-label="Log ind til admin panel">
+                <i class="fas fa-sign-in-alt me-1"></i>Login
+              </a>
             </li>
           </ul>
         </div>
@@ -80,13 +92,21 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="bg-primary text-black text-center py-5 mb-4" id="header">
+    <header class="hero-section text-center py-5 mb-4" id="header" role="banner">
       <div class="container">
-        <h1>Vennekredsen: En Støttegruppe for Hashøjskolens Børn</h1>
-        <p class="lead">
+        <h1 class="hero-title mb-4">Vennekredsen: En Støttegruppe for Hashøjskolens Børn</h1>
+        <p class="hero-subtitle lead mb-4">
           Dedikeret til at forbedre hverdagen for børnene på Hashøjskolen i
           Slots Bjergby.
         </p>
+        <div class="hero-actions">
+          <a href="tilmelding.html" class="btn btn-primary btn-lg me-3" role="button" aria-label="Bliv medlem af Vennekredsen">
+            <i class="fas fa-user-plus me-2"></i>Bliv medlem
+          </a>
+          <a href="ansogning.html" class="btn btn-secondary btn-lg" role="button" aria-label="Ansøg om støtte">
+            <i class="fas fa-file-alt me-2"></i>Ansøg om støtte
+          </a>
+        </div>
       </div>
     </header>
 
