--- a/frontend/html/ansogning.html
+++ b/frontend/html/ansogning.html
@@ -724,7 +724,8 @@
         } catch (error) {
           console.error("Error loading approved projects:", error);
         } finally {
-          document.getElementById("loading-applications").style.display = "none";
+          document.getElementById("loading-applications").style.display =
+            "none";
         }
       }
 
