--- a/frontend/html/admin-panel.html
+++ b/frontend/html/admin-panel.html
@@ -372,7 +372,7 @@
       // Fetch applications from API
       async function loadApplications() {
         try {
-          document.getElementById("loadingApplications").style.display =
+          document.getElementById("loading-applications").style.display =
             "block";
           document.getElementById("ansoegninger").innerHTML = "";
           document
