--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -109,9 +109,7 @@
               arrangerer for skolens børn. Disse fester inkluderer en
               sommerfest, en julefest og en fastelavnsfest. Udover at skabe
               glæde og fællesskab blandt eleverne, bidrager festerne også til at
-              samle penge ind. Gennem disse arrangementer formår Vennekredsen at
-              indsamle mellem <strong>10.000 og 15.000 kr. årligt</strong>.
-              Disse midler er en vigtig økonomisk støtte for at forbedre
+              samle penge ind som anvendes som en økonomisk støtte for at forbedre
               midlerne for de børn, der går på skolen.
             </p>
             <p class="card-text text-center">
