--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -42,6 +42,40 @@
     <!--Navigation bar-->
     <div id="nav-placeholder"></div>
 
+    <!-- Hero Section -->
+    <header
+      class="hero-section d-flex align-items-center justify-content-center text-center text-white"
+      id="header"
+    >
+      <div class="container">
+        <h1 class="hero-title mb-4">
+          Vennekredsen: En Støttegruppe for Hashøjskolens Børn
+        </h1>
+        <p class="hero-subtitle lead mb-4">
+          Dedikeret til at forbedre hverdagen for børnene på Hashøjskolen i
+          Slots Bjergby.
+        </p>
+        <div class="hero-actions">
+          <a
+            href="ansogning.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Ansøg om støtte fra Vennekredsen"
+          >
+            <i class="fas fa-file-alt me-2"></i>Ansøg om støtte
+          </a>
+          <a
+            href="tilmelding.html"
+            class="btn btn-secondary btn-lg"
+            role="button"
+            aria-label="Tilmeld dig til arrangementer"
+          >
+            <i class="fas fa-calendar-plus me-2"></i>Tilmeld til Events
+          </a>
+        </div>
+      </div>
+    </header>
+
     <script>
       $(function () {
         $("#nav-placeholder").load("navbar.html", function () {
@@ -127,7 +161,8 @@
       <p>&copy; 2024 Vennekredsen. Alle rettigheder forbeholdes.</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
