--- a/frontend/html/about.html
+++ b/frontend/html/about.html
@@ -38,6 +38,14 @@
     <!--Navigation bar-->
     <div id="nav-placeholder"></div>
 
+    <!-- Page Header -->
+    <header class="bg-primary text-white text-center py-5">
+      <div class="container">
+        <h1 class="display-4">Om Vennekredsen</h1>
+        <p class="lead">Lær mere om vores mission og værdier</p>
+      </div>
+    </header>
+
     <script>
       $(function () {
         $("#nav-placeholder").load("navbar.html", function () {
