--- a/frontend/html/tilmelding.html
+++ b/frontend/html/tilmelding.html
@@ -37,6 +37,14 @@
     <!--Navigation bar-->
     <div id="nav-placeholder"></div>
 
+    <!-- Page Header -->
+    <header class="bg-primary text-white text-center py-5">
+      <div class="container">
+        <h1 class="display-4">Tilmeld dig til Events</h1>
+        <p class="lead">Tilmeld dig eller dit barn til kommende arrangementer</p>
+      </div>
+    </header>
+
     <script>
       $(function () {
         $("#nav-placeholder").load("navbar.html");
