--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -37,6 +37,14 @@
     <!--Navigation bar-->
     <div id="nav-placeholder"></div>
 
+    <!-- Page Header -->
+    <header class="bg-primary text-white text-center py-5">
+      <div class="container">
+        <h1 class="display-4">Admin Login</h1>
+        <p class="lead">Log ind for at administrere ansøgninger</p>
+      </div>
+    </header>
+
     <script>
       $(function () {
         $("#nav-placeholder").load("navbar.html");
