--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -66,11 +66,19 @@
           </a>
           <a
             href="tilmelding.html"
-            class="btn btn-secondary btn-lg"
+            class="btn btn-primary btn-lg me-3"
             role="button"
             aria-label="Tilmeld dig til arrangementer"
           >
             <i class="fas fa-calendar-plus me-2"></i>Tilmeld til Events
+          </a>
+          <a
+            href="about.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Læs"
+          >
+            <i class="fas fa-book me-2"></i>Læs om Vennekredsen
           </a>
         </div>
       </div>
